# ms-discs

./: .dockerignore  .gitignore  .vercelignore  Dockerfile  README.md  banner.txt  config.py  pyproject.toml  requirements-dev.txt  requirements-prod.txt  requirements.json  requirements.txt  vercel.json
.github/workflows/: ci-cd.yml
app/: __init__.py  config.py  db.py
app/discs/: __init__.py  models.py  repository.py  routes.py  service.py
app/exceptions/: error_negocio_exception.py  error_tecnico_exception.py
app/handlers/: exception_handler.py
app/static/: swagger.yml
tests/: test_config.py  test_discs_routes.py  test_discs_service.py  test_exception_handler.py
